--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,19 +1,38 @@
-.header  {
+.header  { 
+  display:flex;
   font-family: monospace;
   background: papayawhip;
+  
 }
 
 .logo {
+  display:flex;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
   padding: 4px 32px;
+  justify-content: center;
+}
+
+.left-links {
+  display:flex;
+  justify-content: start;
+  align-items: center;
+  border: 5px;
+  border-color:green;
+}
+
+.right-links {
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:flex;
 }
 
 a {
