--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -2,7 +2,11 @@
   display:flex;
   font-family: monospace;
   background: papayawhip;
-  
+  margin:0;
+  padding:8px;
+  gap:8px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -12,27 +16,15 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  justify-content: center;
-}
-
-.left-links {
-  display:flex;
-  justify-content: start;
-  align-items: center;
-  border: 5px;
-  border-color:green;
-}
-
-.right-links {
-  display:flex;
-  justify-content: flex-end;
-  align-items: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display:flex;
+  margin:0;
+  padding:0;
+
 }
 
 a {
