--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -9,17 +9,37 @@ body {
 }
 
 .header {
+  display:flex;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  justify-content: space-between;
 }
 
+.items-left {
+  display:flex;
+  justify-content: flex-start;
+}
+
+.items-right {
+  display:flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.links {
+  display:flex;
+  justify-content: space-between;
+  gap:8px;
+}
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin:8px;
+  align-items: flex-end;
 }
 
 .logo {
@@ -35,6 +55,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin:10px;
 }
 
 a {
@@ -45,4 +66,5 @@ a {
 
 ul {
   list-style-type: none;
+  
 }
