--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -3,13 +3,31 @@ body {
 }
 
 img {
+  display:flex;
   width: 100px;
   height: 100px;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
+  display:flex;
   font-size: 36px;
   font-weight: 900;
+  justify-content: center;
+}
+.info-bar {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.info {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* do not edit this footer */
