--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -3,27 +3,70 @@ body {
   margin: 0;
   min-height: 100vh;
 }
+.page {
+  display:flex;
+  flex-direction: column;
+}
 
 .header {
-  height: 72px;
+  display:flex;
+  height: 55px;
+  font-size: 32px;
+  font-weight: 900;
   background: darkmagenta;
   color: white;
+  align-items: center;
+}
+
+.cards {
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content:space-between;
+}
+
+.content {
+  min-height:85vh;
+  display:flex;
+  flex-direction: row;
+  align-items: stretch;
 }
 
 .footer {
-  height: 72px;
+  margin-top:auto;
+  height: 50px;
   background: #eee;
   color: darkmagenta;
+  padding-top:25px;
+  text-align:center;
 }
 
 .sidebar {
-  width: 300px;
+  display:flex;
+  min-width: 20%;
   background: royalblue;
   box-sizing: border-box;
 }
 
 .card {
+  min-width:200px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex: 0 1 24%;
+  margin:25px;
+}
+
+ul {
+  list-style: none;
+  font-size:20px;
+  font-weight: 700;
+  padding:15px;
+  justify-content: space-between;
+}
+
+a {
+  text-decoration: none;
+  color:white;
+
 }
