--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -4,7 +4,10 @@
 }
 
 .container {
+  display:grid;
+  grid-template-columns: 1fr 4fr;
   text-align: center;
+  gap:4px;
 }
 
 .container div {
@@ -16,16 +19,28 @@
 }
 
 .header {
+  display:grid;
+  grid-template-columns: 1fr 4fr;
   background-color: #393f4d;
+  grid-area:1/1/1/3;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
 }
-
+.menu>ul {
+  display:grid;
+  grid-template-columns: repeat(4,1fr);
+  list-style: none;
+}
 .sidebar {
+  display:grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-area:2/1/6/2;
   background-color: #C50208;
+  gap:50px;
+  text-align: center;
 }
 
 .sidebar .photo {
@@ -43,7 +58,11 @@
   font-size: 16px;
   font-weight: normal;
 }
-
+.nav>ul {
+  display:grid;
+  grid-template-columns: repeat(3,1fr);
+  list-style: none;
+}
 .nav {
   background-color: #C50208;
 }
@@ -54,7 +73,10 @@
 }
 
 .article {
+  display:grid;
+  grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
   background-color: #bccbde;
+  gap:15px;
 }
 
 .article p {
@@ -69,7 +91,9 @@
   color: black;
   text-align: center;
 }
-
+.card {
+  height:200px;
+}
 .card p {
   color: black;
   font-weight: normal;
@@ -82,6 +106,7 @@
 }
 
 .footer {
+  grid-area:6/1/7/3;
   background-color: #393f4d;
 }
 
